# asmiov

./: CMakeLists.txt  README.md  ingen.py  unasm.sh
.github/workflows/: ci.yml
lib/: vstl.hpp
src/: address.cpp  address.hpp  buffer.hpp  const.hpp  external.hpp  label.hpp  macro.hpp  main.cpp  switch.s  util.hpp  writer.cpp  writer.hpp
src/asm/: module.cpp  module.hpp  util.hpp
src/asm/aarch64/: module.cpp  module.hpp  writer.cpp  writer.hpp
src/asm/aarch64/argument/: add.hpp  condition.hpp  pattern.cpp  pattern.hpp  registry.hpp  shift.hpp  sizing.hpp
src/asm/aarch64/instructions/: basic.cpp  branch.cpp
src/asm/x86/: address.cpp  address.hpp  buffer.hpp  const.hpp  emitter.cpp  emitter.hpp  label.hpp  module.cpp  module.hpp  switch.s  util.hpp  writer.cpp  writer.hpp
src/asm/x86/argument/: label.hpp  location.cpp  location.hpp  registry.hpp  scaled.hpp  sizes.hpp
src/asm/x86/instructions/: cpu.cpp  fpu.cpp
src/elf/: buffer.hpp
src/file/elf/: buffer.hpp  header.hpp  section.hpp  segment.hpp
src/instructions/: cpu.cpp  fpu.cpp
src/tasml/: args.hpp  error.hpp  main.cpp  predicate.hpp  stream.hpp  tasml.cpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp  top.cpp  top.hpp
src/util/: refcnt.hpp  set.hpp  tmp.cpp  tmp.hpp
test/: aarch64.cpp  aarch64.hpp  elf.cpp  tasml.cpp  test.hpp  tests.cpp  unit.cpp  x86.cpp
util/: ingen.py  tnasm.sh  unasm.sh
